# connectedhomeip

./: .gitmodules  .restyled.yaml  .spellcheck.yml  BUILD.gn
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: tests.yaml
build_overrides/: nlassert.gni  nlfaultinjection.gni  nlunit_test.gni
config/ameba/: chip.cmake
config/mbed/: CMakeLists.txt
config/python/: CHIPProjectConfig.h
examples/build_overrides/: nlassert.gni  nlfaultinjection.gni
scripts/: build_python.sh
scripts/examples/: build-all-clusters-app.py
scripts/tests/: cirque_tests.sh
scripts/tools/: check_includes_config.py  zap_regen_all.py
src/app/: AttributeAccessInterface.cpp  AttributeAccessInterface.h  BUILD.gn  WriteClient.cpp  WriteClient.h
src/controller/: AutoCommissioner.cpp  AutoCommissioner.h  CHIPDevice.h  CHIPDeviceController.cpp  CHIPDeviceController.h  CommissioningDelegate.h  DevicePairingDelegate.h
src/inet/: BUILD.gn
src/lib/support/io/: BUILD.gn
src/platform/: BUILD.gn  device.gni
src/python_testing/: ITL_FillAllFabrics.py  ITL_FillNMinus1Fabrics.py  QuickAndDirtySpecRevisionDiffer.py  TC_ACE_1_3.py  TC_ACE_1_5.py  TC_BRBINFO_4_1.py  TC_CCTRL_2_2.py  TC_DA_1_2.py  TC_DeviceBasicComposition.py  TC_DeviceConformance.py  TC_IDM_1_2.py  TC_IDM_9_1.py  TC_MCORE_FS_1_3.py  TC_TIMESYNC_2_15.py  TC_TIMESYNC_2_2.py  TC_TIMESYNC_2_4.py  TC_TIMESYNC_2_5.py  TC_TIMESYNC_2_6.py  TC_TIMESYNC_2_7.py  TC_TIMESYNC_2_8.py  TC_TIMESYNC_2_9.py  TC_TMP_4_1.py  TestChoiceConformanceSupport.py  TestConformanceSupport.py  TestSpecParsingDeviceType.py  asn1_cd_format.py  (+6 more)
(+175 files in other folders)
