# Copyright (c) 2020 Project CHIP Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

config("nlio_config") {
  include_dirs = [ "include" ]
}

source_set("nlio") {
  sources = [
    "include/nlbyteorder-big.h",
    "include/nlbyteorder-little.h",
    "include/nlbyteorder.h",
    "include/nlbyteorder.hpp",
    "include/nlio-base.h",
    "include/nlio-base.hpp",
    "include/nlio-byteorder-big.h",
    "include/nlio-byteorder-big.hpp",
    "include/nlio-byteorder-little.h",
    "include/nlio-byteorder-little.hpp",
    "include/nlio-byteorder.h",
    "include/nlio-byteorder.hpp",
    "include/nlio-private.h",
    "include/nlio.h",
    "include/nlio.hpp",
  ]

  public_configs = [ ":nlio_config" ]
}
